update avance de proyecto

--- a/estado.html
+++ b/estado.html
@@ -62,20 +62,28 @@
         <div class="zonas">
             <div class="row">
                 <div class="col-6 col-md-3">
-                    <img src="img/altiplano.png" alt="" class="img-fluid">
-                    <p>Zona Altiplano</p>
+                    <a href="san-luis-potosi.html">
+                        <img src="img/altiplano.png" alt="" class="img-fluid">
+                        <p>Zona Altiplano</p>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <img src="img/zona-centro.png" alt="" class="img-fluid">
-                    <p>Zona Centro</p>
+                    <a href="san-luis-potosi.html">
+                        <img src="img/zona-centro.png" alt="" class="img-fluid">
+                        <p>Zona Centro</p>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <img src="img/zona-media.png" alt="" class="img-fluid">
-                    <p>Zona Media</p>
+                    <a href="san-luis-potosi.html">
+                        <img src="img/zona-media.png" alt="" class="img-fluid">
+                        <p>Zona Media</p>
+                    </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <img src="img/huasteca.png" alt="" class="img-fluid">
-                    <p>Zona Huasteca</p>
+                    <a href="san-luis-potosi.html">
+                        <img src="img/huasteca.png" alt="" class="img-fluid">
+                        <p>Zona Huasteca</p>
+                    </a>
                 </div>
             </div>
         </div>
