--- a/rutas.html
+++ b/rutas.html
@@ -68,6 +68,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab, voluptas totam omnis, incidunt labore reprehenderit quod natus nisi beatae cupiditate fugiat dolorem cum voluptates quia. Quaerat dolor cupiditate voluptatibus!
                         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab, voluptas totam omnis, incidunt labore reprehenderit quod natus nisi beatae cupiditate fugiat dolorem cum voluptates quia. Quaerat dolor cupiditate voluptatibus!
                     </p>
+                    <a href="ruta-del-mezcal.html" class="btn btn-primary">Más</a>
                 </div>
             </div>
         </div>
@@ -81,6 +82,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab, voluptas totam omnis, incidunt labore reprehenderit quod natus nisi beatae cupiditate fugiat dolorem cum voluptates quia. Quaerat dolor cupiditate voluptatibus!
                         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab, voluptas totam omnis, incidunt labore reprehenderit quod natus nisi beatae cupiditate fugiat dolorem cum voluptates quia. Quaerat dolor cupiditate voluptatibus!
                     </p>
+                    <a href="ruta-del-mezcal.html" class="btn btn-primary">Más</a>
                 </div>
             </div>
         </div>
@@ -94,6 +96,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab, voluptas totam omnis, incidunt labore reprehenderit quod natus nisi beatae cupiditate fugiat dolorem cum voluptates quia. Quaerat dolor cupiditate voluptatibus!
                         >Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ab, voluptas totam omnis, incidunt labore reprehenderit quod natus nisi beatae cupiditate fugiat dolorem cum voluptates quia. Quaerat dolor cupiditate voluptatibus!
                     </p>
+                    <a href="ruta-del-mezcal.html" class="btn btn-primary">Más</a>
                 </div>
             </div>
         </div>
