--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                     <input type="email" placeholder="Correo electrónico">
                     <input type="password" placeholder="Contraseña">
                     <div class="form-footer">
-                        <button class="btn btn-primary">Ingresar</button>
+                        <a href="mi-portal.html" class="btn btn-primary">Ingresar</a>
                         <a href="sign-up.html">¿No tienes cuenta?</a>
                     </div>
                     
