--- a/sign-up.html
+++ b/sign-up.html
@@ -24,7 +24,7 @@
                     <input type="number" placeholder="Teléfono">
                     <input type="password" placeholder="Contraseña">
                     <div class="form-footer">
-                        <button class="btn btn-primary">Registrarse</button>
+                        <a href="mi-portal.html" class="btn btn-primary">Registrarse</a>
                         <a href="login.html">¿Ya tienes cuenta?</a>
                     </div>
                     
